--- a/todoapp/package.json
+++ b/todoapp/package.json
@@ -4,11 +4,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@nativescript-community/ui-material-bottom-navigation": "^7.0.42",
     "@nativescript/core": "~8.4.0",
     "@nativescript/theme": "~3.0.2",
     "svelte-native": "~1.0.0"
   },
   "devDependencies": {
+    "@nativescript/ios": "8.4.1",
     "@nativescript/preview-cli": "1.0.2",
     "@nativescript/types": "~8.4.0",
     "@nativescript/webpack": "~5.0.12",
